Fix overflow text on mobile

--- a/services/front-end-service/src/main/resources/public/css/search.css
+++ b/services/front-end-service/src/main/resources/public/css/search.css
@@ -174,6 +174,7 @@ a {
     margin-bottom: 0;
     font-size: 2.1rem;
     font-weight: bold;
+    overflow-wrap: anywhere;
 }
 
 .search-result h5 a {
@@ -197,6 +198,7 @@ a {
 .search-result-highlight {
     font-size: 1.7rem;
     margin-top: 0.2em;
+    overflow-wrap: anywhere;
 }
 
 .search-result-highlight em {
